--- a/models/staging/stripe/src_stripe.yml
+++ b/models/staging/stripe/src_stripe.yml
@@ -2,9 +2,11 @@ version: 2
 
 sources:
   - name: stripe
+    description: A source of Stripe payments
     schema: jaffle_shop
     tables:
       - name: payment
+        description: A table with payments data from Stripe
         loaded_at_field: _batched_at
         freshness:
           warn_after: {count: 12, period: hour}
